[package]
name = "rows"
version = "0.4.1"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2018"
description = "Stream source of rows."
license = "MIT"

[dependencies]
mysql = "14.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.9"
chrono = "0.4"
clap = "2.32"
structopt = "0.2"
csv = "1.0"
dotenv = "0.15.0"
